--- a/templates/default/ports.conf.erb
+++ b/templates/default/ports.conf.erb
@@ -5,5 +5,7 @@
 <% node['apache']['listen_addresses'].uniq.each do |address| -%>
 Listen <%= address.length > 0 ? "#{address}:" : '' %><%= port %>
 <% end -%>
+<% unless %w[fedora].include?(node['platform_family']) -%>
 NameVirtualHost *:<%= port %>
+<% end -%>
 <% end -%>
